[package]
name = "tcp_repeater_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-channel = "1.6.1"
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.0", features = ["derive"] }
